math-core/src/snapshots/math_core__tests__hspace.snap
---
source: math-core/src/lib.rs
expression: "\\hspace{1cm}"
---
<math>
    <mspace width="2.8453rem"/>
</math>
