math-core/src/snapshots/math_core__tests__hspace_empty.snap
---
source: math-core/src/lib.rs
expression: "\\hspace{  }"
---
Position: 7
ExpectedLength(
    "  ",
)
