math-core/src/snapshots/math_core__tests__hspace_non_digits.snap
---
source: math-core/src/lib.rs
expression: "\\hspace{2b2cm}"
---
Position: 7
ExpectedLength(
    "2b2cm",
)
