math-core/src/snapshots/math_core__tests__hspace_unknown_unit.snap
---
source: math-core/src/lib.rs
expression: "\\hspace{2ly}"
---
Position: 7
ExpectedLength(
    "2ly",
)
