math-core/src/snapshots/math_core__tests__hspace_whitespace.snap
---
source: math-core/src/lib.rs
expression: "\\hspace{  4mm }"
---
<math>
    <mspace width="1.13812rem" style="width:1.13812rem"/>
</math>
