math-core/src/snapshots/math_core__tests__hspace_whitespace_in_between.snap
---
source: math-core/src/lib.rs
expression: "\\hspace{  4  em }"
---
<math>
    <mspace width="4em"/>
</math>
