math-core/src/snapshots/math_core__tests__incorrect_bracket.snap
---
source: math-core/src/lib.rs
expression: "\\operatorname[lim}"
---
Position: 17
UnexpectedClose(
    GroupEnd,
)
