math-core/src/snapshots/math_core__tests__incorrect_bracket_in_begin.snap
---
source: math-core/src/lib.rs
expression: "\\begin{matrix] 1 \\end{matrix}"
---
Position: 6
UnparsableEnvName
