math-core/src/snapshots/math_core__tests__int_double_sub.snap
---
source: math-core/src/lib.rs
expression: "\\int__3 x dx"
---
Position: 5
CannotBeUsedHere {
    got: Underscore,
    correct_place: AfterOpOrIdent,
}
