math-core/src/snapshots/math_core__tests__int_limit_prime.snap
---
source: math-core/src/lib.rs
expression: "\\int\\limits'"
---
<math>
    <mover>
        <mo lspace="0">∫</mo>
        <mo>′</mo>
    </mover>
</math>
