math-core/src/snapshots/math_core__tests__int_prime.snap
---
source: math-core/src/lib.rs
expression: "\\int'"
---
<math>
    <msup>
        <mo lspace="0" rspace="0">∫</mo>
        <mo>′</mo>
    </msup>
</math>
