math-core/src/snapshots/math_core__tests__integral_pointless_limits.snap
---
source: math-core/src/lib.rs
expression: "\\int\\limits dx"
---
<math>
    <mo lspace="0">∫</mo>
    <mi>d</mi>
    <mi>x</mi>
</math>
